--- a/cennik.css
+++ b/cennik.css
@@ -18,12 +18,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 html, body{
     width: 100%;
+    max-width: 1550px;
 }
 a{
     text-decoration: none;
 }
 div.nav-list-header{
-    height: 5em;
+    height: 4em;
     width: 100%;
     position: fixed;
     top: 0;
@@ -35,36 +36,37 @@ div.nav-list-header{
     display: -ms-inline-flexbox;
     display: inline-flex;
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     font-size: 1.2em;
     line-height: 1.4em;
     font-style: italic;
     font-family: bitter,serif;
     list-style: none;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 5%;
 }
 .nav-menu {
     padding-left: 30%;
+    padding-right: 1em;
 }
 .menu-social{
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
     -ms-flex-wrap:wrap;
-        flex-wrap:wrap;
+    flex-wrap:wrap;
     -webkit-box-flex: 0;
-        -ms-flex-positive: 0;
-            flex-grow: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
     -ms-flex-negative: 1;
-        flex-shrink: 1;
+    flex-shrink: 1;
     text-align: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 .fa-brands,.nav-link,a{
     color:#f2f2f2;
@@ -94,7 +96,7 @@ section.slide {
     position: absolute;
     width: 100%;
     height: 700px;
-    top: 4em;
+    top: 0;
     left: 0;
     color: transparent;
     background-size: cover;
@@ -103,35 +105,35 @@ section.slide {
     opacity: 0;
     z-index: -1;
     -webkit-animation: imageAnimation 20s linear infinite 0s;
-            animation: imageAnimation 20s linear infinite 0s;
+    animation: imageAnimation 20s linear infinite 0s;
 }
 ul,li,span{
     list-style: none;
 }
 .slideshow li:nth-child(1) span {
-    background-image: url('./img/exterier/vila.jpg');
+    background-image: url('./img/vinaren/vinaren-2.jpg');
     /* animation-delay: 6s;*/
 }
 .slideshow li:nth-child(2) span {
-    background-image: url('./img/exterier/foto1.jpg');
+    background-image: url('./img/izba4/izba4-2.jpg');
     -webkit-animation-delay: 6s;
-            animation-delay: 6s;
+    animation-delay: 6s;
 }
 .slideshow li:nth-child(3) span {
-    background-image: url('./img/jedalen.jpg');
+    background-image: url('./img/exterier/budova-ex1.png');
     -webkit-animation-delay: 12s;
-            animation-delay: 12s;
+    animation-delay: 12s;
 }
 @-webkit-keyframes imageAnimation {
     0% {
         opacity: 0;
         -webkit-animation-timing-function: ease-in;
-                animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
     }
     8% {
         opacity: 1;
         -webkit-animation-timing-function: ease-out;
-                animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
     }
     17% {
         opacity: 1
@@ -153,12 +155,12 @@ ul,li,span{
     0% {
         opacity: 0;
         -webkit-animation-timing-function: ease-in;
-                animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
     }
     8% {
         opacity: 1;
         -webkit-animation-timing-function: ease-out;
-                animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
     }
     17% {
         opacity: 1
@@ -197,20 +199,20 @@ ul{
     color:#404040 ;
     text-shadow: 2px 2px 2px white;
     -webkit-animation: myfirst 4s linear;
-            animation: myfirst 4s linear;
+    animation: myfirst 4s linear;
     -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
+    animation-timing-function: linear;
     -webkit-animation-iteration-count: 2;
-            animation-iteration-count: 2;
+    animation-iteration-count: 2;
     -webkit-animation-direction: alternate;
-            animation-direction: alternate;
+    animation-direction: alternate;
     text-align: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 p {
     margin: 1em;
@@ -244,10 +246,10 @@ p {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     position: relative;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     width: 100%;
     padding-top: 5em;
     padding-bottom: 5em;
@@ -258,11 +260,11 @@ p {
     font-family: sans-serif;
     text-align: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 .cennik-1 {
     border-collapse: collapse;
@@ -275,7 +277,7 @@ th, td {
     padding: .5em;
     text-align: center;
     -ms-flex-line-pack: center;
-        align-content: center;
+    align-content: center;
     border: .1em solid #000000;
 }
 tr:nth-child(even){
@@ -285,7 +287,7 @@ tr:nth-child(even){
 /*Footer*/
 
 .container-footer{
-    background: #999999;
+    background: #404040;
     height: 13.5em;
     padding-bottom: .5em;
 }
@@ -298,12 +300,12 @@ tr:nth-child(even){
     display: -ms-inline-flexbox;
     display: inline-flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     -ms-flex-negative: 1;
-        flex-shrink: 1;
+    flex-shrink: 1;
     color: #404040;
     padding-top: .5em;
     font-size: 1.3em;
@@ -312,16 +314,16 @@ tr:nth-child(even){
     font-family: bitter,serif;
     list-style: none;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 5%;
 }
-.hauzi,.personal1 {
-    color: #404040;
+.personal1 {
+   color:  #f2f2f2;
 }
 .personal :hover,
 .personal :focus {
-    color: #ffffff;
+    color: #999999;
 }
 .kontakt{
     padding-left: 1.2em;
@@ -329,7 +331,7 @@ tr:nth-child(even){
     font-size: 1.2em;
     text-align: left;
     display: block;
-    color:#404040;
+    color: #f2f2f2;
 }
 .kontakt strong {
     font-size: 1em;
@@ -351,8 +353,8 @@ tr:nth-child(even){
     font-size: 1.2em;
 }
 .copy p {
-        margin: 0;
-    }
+    margin: 0;
+}
 #button {
     color: #666666;
     position: fixed;
@@ -423,15 +425,17 @@ tr:nth-child(even){
         top: 0;
     }
     .nav-menu {
-        padding-left: 0;
+        padding-left: 60%;
+        padding-right: 0;
+    }
+    .nav-link {
+        border-top: solid .1em #999999;
     }
     .navigation.responsive a {
         position: relative;
         display: -ms-grid;
         display: grid;
-        background: #666666;
-        -webkit-box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
-                box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
+        background: #404040;
         line-height: 1.5em;
         font-size: 1.1em;
     }
@@ -439,9 +443,9 @@ tr:nth-child(even){
         position: relative;
         display: -ms-grid;
         display: grid;
-        top: 6.5em;
-        padding-left: 60%;
-        padding-right: 2em;
+        background: #404040;
+        top: 6.17em;
+        padding-left: 0;
         text-align: center;
     }
 }
@@ -468,15 +472,12 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 700px) {
-    .nav-menu .icon {
-        right: 1.5em;
-    }
     .container-cennik-1 {
         font-size: 1em;
     }
 }
 @media (max-width: 620px) {
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 55%;
     }
 }
@@ -505,17 +506,17 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 550px){
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 50%;
     }
 }
 @media (max-width: 500px) {
-    .container-cennik-1 {
+    .cennik-1 {
         font-size: .8em;
     }
 }
 @media (max-width: 490px){
-    .navigation.responsive {
+    .nav-menu  {
         padding-left: 42%;
     }
     .text1 {
@@ -534,11 +535,21 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 450px){
-    .navigation.responsive {
+    .nav-menu  {
         padding-left: 39%;
+    }
+    
+    td {
+        padding: 0.3em;
+    }
+    th {
+        padding: 0.3em;
     }
     .cennik-1 {
         font-size: .7em;
+    }
+    .cennik-2 {
+        font-size: .9em;
     }
     .text1 {
         font-size: 2em;
@@ -555,8 +566,11 @@ tr:nth-child(even){
     .nav-menu {
         font-size: 1em;
     }
-    .navigation.responsive {
+    .nav-menu  {
         padding-left: 35%;
+    }
+    .navigation.responsive {
+        top: 6.38em;
     }
     .text1 {
         font-size: 1.6em;
@@ -574,8 +588,14 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 350px) {
+    .nav-menu {
+        padding-left: 30%;
+    }
     .cennik-1 {
         font-size: .6em;
+    }
+    .cennik-2 {
+        font-size: .8em;
     }
 }
 @media (max-width: 340px){
@@ -596,6 +616,9 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 290px){
+    .nav-menu {
+        padding-left: 25%;
+    }
     .text1 {
         font-size: 1.2em;
         top: 32em;
