--- a/kontakt.css
+++ b/kontakt.css
@@ -18,12 +18,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 html, body{
     width: 100%;
+    max-width: 1550px;
 }
 a{
     text-decoration: none;
 }
 div.nav-list-header{
-    height: 5em;
+    height: 4em;
     width: 100%;
     position: fixed;
     top: 0;
@@ -35,36 +36,37 @@ div.nav-list-header{
     display: -ms-inline-flexbox;
     display: inline-flex;
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     font-size: 1.2em;
     line-height: 1.4em;
     font-style: italic;
     font-family: bitter,serif;
     list-style: none;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 5%;
 }
 .nav-menu {
     padding-left: 30%;
+    padding-right: 1em;
 }
 .menu-social{
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
     -ms-flex-wrap:wrap;
-        flex-wrap:wrap;
+    flex-wrap:wrap;
     -webkit-box-flex: 0;
-        -ms-flex-positive: 0;
-            flex-grow: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
     -ms-flex-negative: 1;
-        flex-shrink: 1;
+    flex-shrink: 1;
     text-align: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 .fa-brands,.nav-link,a{
     color:#f2f2f2;
@@ -94,7 +96,7 @@ section.slide {
     position: absolute;
     width: 100%;
     height: 700px;
-    top: 4em;
+    top: 0;
     left: 0;
     color: transparent;
     background-size: cover;
@@ -103,35 +105,35 @@ section.slide {
     opacity: 0;
     z-index: -1;
     -webkit-animation: imageAnimation 20s linear infinite 0s;
-            animation: imageAnimation 20s linear infinite 0s;
+    animation: imageAnimation 20s linear infinite 0s;
 }
 ul,li,span{
     list-style: none;
 }
 .slideshow li:nth-child(1) span {
-    background-image: url('./img/exterier/vila.jpg');
+    background-image: url('./img/vinaren/vinaren3.jpg');
     /* animation-delay: 6s;*/
 }
 .slideshow li:nth-child(2) span {
-    background-image: url('./img/exterier/foto1.jpg');
+    background-image: url('./img/kuchyna/kuchyna-1.jpg');
     -webkit-animation-delay: 6s;
-            animation-delay: 6s;
+    animation-delay: 6s;
 }
 .slideshow li:nth-child(3) span {
-    background-image: url('./img/jedalen.jpg');
+    background-image: url('./img/izba1/izba1-3.jpg');
     -webkit-animation-delay: 12s;
-            animation-delay: 12s;
+    animation-delay: 12s;
 }
 @-webkit-keyframes imageAnimation {
     0% {
         opacity: 0;
         -webkit-animation-timing-function: ease-in;
-                animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
     }
     8% {
         opacity: 1;
         -webkit-animation-timing-function: ease-out;
-                animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
     }
     17% {
         opacity: 1
@@ -153,12 +155,12 @@ ul,li,span{
     0% {
         opacity: 0;
         -webkit-animation-timing-function: ease-in;
-                animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
     }
     8% {
         opacity: 1;
         -webkit-animation-timing-function: ease-out;
-                animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
     }
     17% {
         opacity: 1
@@ -197,20 +199,20 @@ ul{
     color:#404040 ;
     text-shadow: 2px 2px 2px white;
     -webkit-animation: myfirst 4s linear;
-            animation: myfirst 4s linear;
+    animation: myfirst 4s linear;
     -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
+    animation-timing-function: linear;
     -webkit-animation-iteration-count: 2;
-            animation-iteration-count: 2;
+    animation-iteration-count: 2;
     -webkit-animation-direction: alternate;
-            animation-direction: alternate;
+    animation-direction: alternate;
     text-align: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 p {
     margin: 1em;
@@ -245,10 +247,10 @@ p {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     position: relative;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     width: 100%;
     padding-top: 5em;
     padding-bottom: 5em;
@@ -259,11 +261,11 @@ p {
     font-family: sans-serif;
     text-align: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     color: #666666;
 }
 .kontakt-kontakt{
@@ -273,7 +275,7 @@ p {
     border: .1em solid #d9d9d9;
     background-color: #e6e6e6;
     -webkit-box-shadow: 0px 0px 16px 16px #d9d9d9;
-            box-shadow: 0px 0px 16px 16px #d9d9d9;
+    box-shadow: 0px 0px 16px 16px #d9d9d9;
     padding-top: 2em;
     padding-bottom: 2em;
 }
@@ -304,7 +306,7 @@ h3 {
 /*Footer*/
 
 .container-footer{
-    background: #999999;
+    background: #404040;
     height: 13.5em;
     padding-bottom: .5em;
 }
@@ -317,13 +319,13 @@ h3 {
     display: -ms-inline-flexbox;
     display: inline-flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     -ms-flex-negative: 1;
-        flex-shrink: 1;
-    color: #404040;
+    flex-shrink: 1;
+    color:#f2f2f2;
     padding-top: .5em;
     font-size: 1.3em;
     line-height: 2em;
@@ -331,16 +333,16 @@ h3 {
     font-family: bitter,serif;
     list-style: none;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 5%;
 }
-.hauzi,.personal1 {
-    color: #404040;
+.personal1 {
+   color:  #f2f2f2;
 }
 .personal :hover,
 .personal :focus {
-    color: #ffffff;
+    color: #999999;
 }
 .kontakt{
     padding-left: 1.2em;
@@ -348,7 +350,7 @@ h3 {
     font-size: 1.2em;
     text-align: left;
     display: block;
-    color:#404040;
+    color: #f2f2f2;
 }
 .kontakt strong {
     font-size: 1em;
@@ -370,8 +372,8 @@ h3 {
     font-size: 1.2em;
 }
 .copy p {
-        margin: 0;
-    }
+    margin: 0;
+}
 #button {
     color: #666666;
     position: fixed;
@@ -442,15 +444,17 @@ h3 {
         top: 0;
     }
     .nav-menu {
-        padding-left: 0;
+        padding-left: 60%;
+        padding-right: 0;
+    }
+    .nav-link {
+        border-top: solid .1em #999999;
     }
     .navigation.responsive a {
         position: relative;
         display: -ms-grid;
         display: grid;
-        background: #666666;
-        -webkit-box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
-                box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
+        background: #404040;
         line-height: 1.5em;
         font-size: 1.1em;
     }
@@ -458,9 +462,9 @@ h3 {
         position: relative;
         display: -ms-grid;
         display: grid;
-        top: 6.5em;
-        padding-left: 60%;
-        padding-right: 2em;
+        background: #404040;
+        top: 6.17em;
+        padding-left: 0;
         text-align: center;
     }
 }
@@ -490,9 +494,6 @@ h3 {
     }
 }
 @media (max-width: 700px) {
-    .nav-menu .icon {
-        right: 1.5em;
-    }
     .kontakt-kontakt{
         width: 80%;
     }
@@ -501,7 +502,7 @@ h3 {
     .container-kontakt {
         font-size: 1.2em;
     }
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 55%;
     }
 }
@@ -530,12 +531,12 @@ h3 {
     .container-kontakt {
         font-size: 1.1em;
     }
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 50%;
     }
 }
 @media (max-width: 490px){
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 42%;
     }
     .text1 {
@@ -554,7 +555,7 @@ h3 {
     }
 }
 @media (max-width: 450px){
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 39%;
     }
     .kontakt-kontakt{
@@ -575,8 +576,11 @@ h3 {
     .nav-menu {
         font-size: 1em;
     }
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 35%;
+    }
+    .navigation.responsive {
+        top: 6.38em;
     }
     .text1 {
         font-size: 1.6em;
@@ -594,6 +598,9 @@ h3 {
     }
 }
 @media (max-width: 350px) {
+    .nav-menu {
+        padding-left: 30%;
+    }
     .kontakt-kontakt{
         width: 100%;
         font-size: .9em;
@@ -621,6 +628,9 @@ h3 {
     }
 }
 @media (max-width: 290px){
+    .nav-menu {
+        padding-left: 25%;
+    }
     .text1 {
         font-size: 1.2em;
         top: 32em;
