--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -18,12 +18,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 html, body{
     width: 100%;
+    max-width: 1550px;
 }
 a{
     text-decoration: none;
 }
 div.nav-list-header{
-    height: 5em;
+    height: 4em;
     width: 100%;
     position: fixed;
     top: 0;
@@ -49,6 +50,7 @@ div.nav-list-header{
 }
 .nav-menu {
     padding-left: 30%;
+    padding-right: 1em;
 }
 .menu-social{
     display: -webkit-inline-box;
@@ -94,7 +96,7 @@ section.slide {
     position: absolute;
     width: 100%;
     height: 700px;
-    top: 4em;
+    top: 0;
     left: 0;
     color: transparent;
     background-size: cover;
@@ -109,7 +111,7 @@ ul,li,span{
     list-style: none;
 }
 .slideshow li:nth-child(1) span {
-    background-image: url('./img/exterier/vila.jpg');
+    background-image: url('./img/exterier/budova-zima.jpg');
     /* animation-delay: 6s;*/
 }
 .slideshow li:nth-child(2) span {
@@ -118,7 +120,7 @@ ul,li,span{
     animation-delay: 6s;
 }
 .slideshow li:nth-child(3) span {
-    background-image: url('./img/jedalen.jpg');
+    background-image: url('./img/jedalen/jedalen-7.jpg');
     -webkit-animation-delay: 12s;
     animation-delay: 12s;
 }
@@ -592,7 +594,7 @@ img > p{
 /*footer*/
 
 .container-footer{
-    background: #999999;
+    background: #404040;
     height: 13.5em;
 }
 .fa-1x{
@@ -610,7 +612,7 @@ img > p{
     flex-grow: 1;
     -ms-flex-negative: 1;
     flex-shrink: 1;
-    color: #404040;
+    color:#f2f2f2;
     padding-top: .5em;
     font-size: 1.3em;
     line-height: 2em;
@@ -622,12 +624,15 @@ img > p{
     align-items: center;
     gap: 5%;
 }
-.hauzi,.personal1 {
+.hauzi {
     color: #404040;
+}
+.personal1 {
+   color:  #f2f2f2;
 }
 .personal :hover,
 .personal :focus {
-    color: #ffffff;
+    color: #999999;
 }
 .kontakt{
     padding-left: 1.2em;
@@ -635,7 +640,7 @@ img > p{
     font-size: 1.2em;
     text-align: left;
     display: block;
-    color:#404040;
+    color: #f2f2f2;
 }
 .kontakt strong {
     font-size: 1em;
@@ -657,8 +662,8 @@ img > p{
     font-size: 1.2em;
 }
 .copy p {
-        margin: 0;
-    }
+    margin: 0;
+}
 #button {
     color: #666666;
     position: fixed;
@@ -743,15 +748,17 @@ img > p{
         top: 0;
     }
     .nav-menu {
-        padding-left: 0;
+        padding-left: 60%;
+        padding-right: 0;
+    }
+    .nav-link {
+        border-top: solid .1em #999999;
     }
     .navigation.responsive a {
         position: relative;
         display: -ms-grid;
         display: grid;
-        background: #666666;
-        -webkit-box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
-        box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.8);
+        background: #404040;
         line-height: 1.5em;
         font-size: 1.1em;
     }
@@ -759,9 +766,9 @@ img > p{
         position: relative;
         display: -ms-grid;
         display: grid;
-        top: 6.5em;
-        padding-left: 60%;
-        padding-right: 2em;
+        background: #404040;
+        top: 6.17em;
+        padding-left: 0;
         text-align: center;
     }
 }
@@ -827,7 +834,7 @@ img > p{
         width: 50px;
         height: 64px;
     }
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 55%;
     }
 }
@@ -864,12 +871,12 @@ img > p{
     }
 }
 @media (max-width: 550px){
-    .navigation.responsive {
+    .nav-menu {
         padding-left: 50%;
     }
 }
 @media (max-width: 490px){
-    .navigation.responsive {
+    .nav-menu  {
         padding-left: 42%;
     }
     .text1 {
@@ -888,7 +895,7 @@ img > p{
     }
 }
 @media (max-width: 450px){
-    .navigation.responsive {
+    .nav-menu  {
         padding-left: 39%;
     }
     .text1 {
@@ -910,8 +917,11 @@ img > p{
     .nav-menu {
         font-size: 1em;
     }
-    .navigation.responsive {
+    .nav-menu  {
         padding-left: 35%;
+    }
+    .navigation.responsive {
+        top: 6.38em;
     }
     .text1 {
         font-size: 1.6em;
@@ -926,6 +936,11 @@ img > p{
     }
     .fa-2x {
         font-size: 1.8em;
+    }
+}
+@media (max-width: 350px) {
+    .nav-menu {
+        padding-left: 30%;
     }
 }
 @media (max-width: 340px){
@@ -946,6 +961,9 @@ img > p{
     }
 }
 @media (max-width: 290px){
+    .nav-menu {
+        padding-left: 25%;
+    }
     .text1 {
         font-size: 1.2em;
         top: 32em;
