--- a/cennik.css
+++ b/cennik.css
@@ -447,6 +447,7 @@ tr:nth-child(even){
         top: 6.17em;
         padding-left: 0;
         text-align: center;
+        gap: 0;
     }
 }
 @media (max-width: 820px){
