--- a/kontakt.css
+++ b/kontakt.css
@@ -466,6 +466,7 @@ h3 {
         top: 6.17em;
         padding-left: 0;
         text-align: center;
+        gap: 0;
     }
 }
 @media (max-width: 820px){
