--- a/okolie.css
+++ b/okolie.css
@@ -973,6 +973,7 @@ b {
         top: 6.17em;
         padding-left: 0;
         text-align: center;
+        gap: 0;
     }
 }
 @media (max-width: 820px){
