--- a/ubytovanie.css
+++ b/ubytovanie.css
@@ -1051,6 +1051,7 @@ p{
         top: 6.17em;
         padding-left: 0;
         text-align: center;
+        gap: 0;
     }
 }
 @media (max-width: 820px){
