--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -770,6 +770,7 @@ img > p{
         top: 6.17em;
         padding-left: 0;
         text-align: center;
+        gap: 0;
     }
 }
 @media (max-width: 820px) {
