--- a/okolie.css
+++ b/okolie.css
@@ -842,7 +842,7 @@ b {
     gap: 5%;
 }
 .personal1 {
-   color:  #f2f2f2;
+    color:  #f2f2f2;
 }
 .personal :hover,
 .personal :focus {
@@ -957,6 +957,9 @@ b {
     .nav-link {
         border-top: solid .1em #999999;
     }
+    .navigation li:last-child{
+        border-bottom: solid .1em #999999;
+    }
     .navigation.responsive a {
         position: relative;
         display: -ms-grid;
@@ -970,7 +973,7 @@ b {
         display: -ms-grid;
         display: grid;
         background: #404040;
-        top: 6.17em;
+        top: 6.2em;
         padding-left: 0;
         text-align: center;
         gap: 0;
@@ -1078,7 +1081,7 @@ b {
         padding-left: 35%;
     }
     .navigation.responsive {
-        top: 6.38em;
+        top: 6.4em;
     }
     .text1 {
         font-size: 1.6em;
