--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -754,6 +754,9 @@ img > p{
     .nav-link {
         border-top: solid .1em #999999;
     }
+    .navigation li:last-child{
+        border-bottom: solid .1em #999999;
+    }
     .navigation.responsive a {
         position: relative;
         display: -ms-grid;
@@ -767,7 +770,7 @@ img > p{
         display: -ms-grid;
         display: grid;
         background: #404040;
-        top: 6.17em;
+        top: 6.2em;
         padding-left: 0;
         text-align: center;
         gap: 0;
@@ -922,7 +925,7 @@ img > p{
         padding-left: 35%;
     }
     .navigation.responsive {
-        top: 6.38em;
+        top: 6.4em;
     }
     .text1 {
         font-size: 1.6em;
