--- a/cennik.css
+++ b/cennik.css
@@ -28,6 +28,7 @@ div.nav-list-header{
     width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     background: #404040;
     z-index: 999;
 }
