--- a/okolie.css
+++ b/okolie.css
@@ -28,6 +28,7 @@ div.nav-list-header{
     width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     background: #404040;
     z-index: 999;
 }
@@ -288,7 +289,7 @@ p {
     box-shadow: 0px 0px 16px 16px #d9d9d9;
 }
 .border {
-    width: 40%;
+    width: 60%;
     padding-top: 1em;
 }
 
@@ -917,8 +918,13 @@ b {
     }
 }
 @media (max-width: 950px){
-    .container-okolie-ciernohronska-zeleznicka,.container-okolie-cyklodrezina,.container-okolie-vydrovo,.container-okolie-ski-cierny-balog,.container-okolie-bystrianska-jaskyna,.container-okolie-nizke-tatry,.container-okolie-tipy{
+    .container-okolie-ciernohronska-zeleznicka,.container-okolie-cyklodrezina,.container-okolie-vydrovo,
+    .container-okolie-ski-cierny-balog,.container-okolie-bystrianska-jaskyna,.container-okolie-nizke-tatry,.container-okolie-tipy{
         font-size: 1em;
+    }
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 60%;
     }
     .fa-1x {
         padding-left: 1em;
@@ -978,6 +984,10 @@ b {
         text-align: center;
         gap: 0;
     }
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 65%;
+    }
 }
 @media (max-width: 820px){
     .text1 {
@@ -1002,6 +1012,10 @@ b {
     }
 }
 @media (max-width: 620px) {
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 70%;
+    }
     .column {
         width: 50%;
         padding-bottom: .5em;
@@ -1038,6 +1052,10 @@ b {
     .nav-menu {
         padding-left: 50%;
     }
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 75%;
+    }   
 }
 @media (max-width: 490px){
     .nav-menu  {
@@ -1047,6 +1065,10 @@ b {
         font-size: 2.2em;
         top:  16.8em;
         margin-left: .8em;
+    }
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 80%;
     }
     .container-footer {
         height: 13em;
@@ -1065,6 +1087,9 @@ b {
     .text1 {
         font-size: 2em;
         top: 18em;
+    }
+     .border {
+        width: 75%;
     }
     .container-footer {
         height: 11.5em;
@@ -1090,6 +1115,10 @@ b {
     .personal {
         font-size: .9em;
     }
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 85%;
+    }
     #button {
         right: .5em;
         bottom: 7em;
@@ -1101,6 +1130,10 @@ b {
 @media (max-width: 350px) {
     .nav-menu {
         padding-left: 30%;
+    }
+    .okolie-ciernohronska-zeleznicka, .okolie-cyklodrezina, .okolie-vydrovo, .okolie-ski-cierny-balog, .okolie-bystrianska-jaskyna, 
+    .okolie-nizke-tatry, .okolie-tipy {
+        width: 90%;
     }
 }
 @media (max-width: 340px){
