--- a/ubytovanie.css
+++ b/ubytovanie.css
@@ -487,6 +487,28 @@ p{
     text-align: center;
     width: 30%;
 }
+.thumbnails5 {
+    position: relative;
+    float: left;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-align: center;
+    width: 30%;
+}
 .thumbnails1 :after {
     content: "";
     display: table;
@@ -503,6 +525,11 @@ p{
     clear: both;
 }
 .thumbnails4 :after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.thumbnails5 :after {
     content: "";
     display: table;
     clear: both;
@@ -532,6 +559,13 @@ p{
     position: relative;
 }
 .figure4 img {
+    width: 100%;
+    border: .1em solid #666666;
+}
+.figure5 {
+    position: relative;
+}
+.figure5 img {
     width: 100%;
     border: .1em solid #666666;
 }
@@ -717,10 +751,87 @@ p{
     font-family: 'Playfair Display', serif;
     padding-bottom: .8em;
 }
+/* Izba číslo 5 */
+.container5{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    padding-top: 5em;
+    background-image : -webkit-gradient(linear,left top, left bottom,from(#ffffff),color-stop(#ffffff), color-stop(#f2f2f2),color-stop(#e6e6e6),color-stop(#d9d9d9),color-stop(#cccccc),color-stop(#bfbfbf),to(#b3b3b3));
+    background-image : -o-linear-gradient(top,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
+    background-image : linear-gradient(to bottom,#ffffff,#ffffff, #f2f2f2,#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3);
+    font-size: 1.3em;
+    font-family: sans-serif;
+    text-align: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+.izba-cislo-5{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    padding-bottom: 5em;
+    gap: 10%;
+}
+.text-izba-c-5{
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-negative: 1;
+    flex-shrink: 1;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-align: center;
+    width: 30%;
+    padding: 1em;
+    border: .1em solid #d9d9d9;
+    background-color: #e6e6e6;
+    -webkit-box-shadow: 0px 0px 16px 16px #d9d9d9;
+    box-shadow: 0px 0px 16px 16px #d9d9d9;
+}
+.text-izba-c-5 strong{
+    font-size: 1.5em;
+    font-family: 'Playfair Display', serif;
+    padding-bottom: .8em;
+}
+.border {
+    width: 60%;
+    padding-top: 1em;
+}
 
 /* vinaren-jedalen-kutik-kuchyna */
 
-.container5{
+.container6{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
